--- a/name.html
+++ b/name.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="https://a-chaaa.github.io/rinakoteikoku/style.css">
 </head>
 
-<body class="home">
+<body class="home index2">
 
 <!--スライドショー-->
 <div id="mainimg"></div>
