--- a/about.html
+++ b/about.html
@@ -56,25 +56,6 @@
  <iframe width="300" height="300"  src="https://www.youtube.com/embed/_1VKuWto0FI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
 </section>
   
- <section> 
-<h2>News<span>最新情報</span></h2>
-
-<center>
-<dl>
-<dt>2022/2/14</dt>
-  <dd><a href ="https://a-chaaa.github.io/rinakoteikoku/torekanew.html">トレカケースの詳細を更新しました！</a></dd>
-<dt>2022/2/7</dt>
-  <dd><a href ="https://a-chaaa.github.io/rinakoteikoku/torekanew.html">サーバーメンテナンスのお知らせ</a></dd>
-<dt>2022/2/3</dt>
-<dd><a href ="https://a-chaaa.github.io/rinakoteikoku/torekanew.html">グッズビジュアル解禁！</a></dd>
-<dt>2022/1/14</dt>
-<dd><a href ="https://a-chaaa.github.io/rinakoteikoku/torekanew.html">ﾘﾅｺ帝国、活動開始！</a></dd>
-</dl>
-</center>
-</section>
-
-  <section>
-
 
 
   
@@ -82,7 +63,8 @@
   
 <div style="text-align: center">  
 <figure class="up">
-<img src="https://a-chaaa.github.io/rinakoteikoku/マップ.png" alt="イベントマップ">
+ <div class="10">
+<img src="https://a-chaaa.github.io/rinakoteikoku/マップだよ.png" alt="イベントマップ">
 </figure>
 </div>
 
@@ -102,6 +84,26 @@
 
 </section>
   
+ 
+ <section> 
+<h2>News<span>最新情報</span></h2>
+
+<center>
+<dl>
+<dt>2022/2/14</dt>
+  <dd><a href ="https://a-chaaa.github.io/rinakoteikoku/torekanew.html">トレカケースの詳細を更新しました！</a></dd>
+<dt>2022/2/7</dt>
+  <dd><a href ="https://a-chaaa.github.io/rinakoteikoku/torekanew.html">サーバーメンテナンスのお知らせ</a></dd>
+<dt>2022/2/3</dt>
+<dd><a href ="https://a-chaaa.github.io/rinakoteikoku/torekanew.html">グッズビジュアル解禁！</a></dd>
+<dt>2022/1/14</dt>
+<dd><a href ="https://a-chaaa.github.io/rinakoteikoku/torekanew.html">ﾘﾅｺ帝国、活動開始！</a></dd>
+</dl>
+</center>
+</section>
+
+  <section>
+
 <section>
 
 <h2>Photo's<span>イベントの写真</span></h2>
