--- a/about.html
+++ b/about.html
@@ -65,6 +65,7 @@
 <figure class="up">
  <div class="10">
 <img src="https://a-chaaa.github.io/rinakoteikoku/マップだよ.png" alt="イベントマップ">
+ </div>
 </figure>
 </div>
 
