--- a/name.html
+++ b/name.html
@@ -44,7 +44,7 @@
 <h3>基本情報</h3>
 受付時間　10:00〜19:00<br>
 所要時間　5〜10分<br>
-エリア　こちら（リンクで飛べるようにしたいねえ）
+ エリア　<a href="https://a-chaaa.github.io/rinakoteikoku/about.html#10">こちら</a>
 
 </div>
 </div>
