--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
 <div style="text-align: center">  
 <figure class="up">
  <div class="10">
-<img src="https://a-chaaa.github.io/rinakoteikoku/マップだよ.png" alt="イベントマップ">
+<img src="https://a-chaaa.github.io/rinakoteikoku/map.png" alt="イベントマップ">
  </div>
 </figure>
 </div>
