--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
 <main>
  
 <h2>Signal and Signaless<span>愛は、時を超えて共感</span></h2> 
+<center>文豪作品×オタ活</center>
  
 <section>
 <h2>PV<span>プロモーションビデオ</span></h2>
