--- a/about.html
+++ b/about.html
@@ -26,7 +26,6 @@
 <main>
  
 <h2>Signal and Signaless<span>愛は、時を超えて共感</span></h2> 
-<center>文豪作品×オタ活</center>
  
 <section>
 <h2>PV<span>プロモーションビデオ</span></h2>
@@ -34,6 +33,8 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/rN5pTvK5N_g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
 </center>
 </section>
+ 
+<h2><span>何十年もの時を経た作品に共感する。これってすごいことだと思いませんか？</span></h2>
 
 <section>
  
